--- a/app/src/main/res/layout/notes_recyclerview_card.xml
+++ b/app/src/main/res/layout/notes_recyclerview_card.xml
@@ -10,9 +10,7 @@
     android:layout_marginTop="5dp"
     android:layout_marginRight="6dp"
     android:layout_marginBottom="5dp"
-    android:backgroundTint="@color/colorPrimary"
-    android:elevation="10dp"
-    app:cardCornerRadius="3dp">
+    android:elevation="10dp">
 
     <LinearLayout
         android:id="@+id/notes_recyclerview_header_container"
@@ -22,7 +20,8 @@
         android:divider="@drawable/divider"
         android:dividerPadding="7dp"
         android:orientation="horizontal"
-        android:showDividers="middle">
+        android:showDividers="none"
+        android:background="@drawable/card_background">
 
         <TextView
             android:id="@+id/notes_recyclerview_header"
@@ -44,6 +43,7 @@
             android:foreground="@drawable/ic_keyboard_arrow_down_black_24dp"
             android:foregroundGravity="center"
             android:clickable="true"
-            android:focusable="true" />
+            android:focusable="true"
+            android:visibility="invisible"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
