--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -4,13 +4,13 @@
     <item
         android:state_selected="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/bottom_menu_item_unchecked"/>
         </shape>
     </item>
     <item
         android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"/>
+            <solid android:color="@color/bottom_menu_item_checked"/>
         </shape>
     </item>
 </selector>
