--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -4,15 +4,15 @@
     <item
         android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
-            <corners android:radius="5dp"/>
+            <solid android:color="@color/card_unpressed"/>
+            <corners android:radius="3dp"/>
         </shape>
     </item>
     <item
         android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark"/>
-            <corners android:radius="5dp"/>
+            <solid android:color="@color/card_pressed"/>
+            <corners android:radius="3dp"/>
         </shape>
     </item>
 </selector>
