--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,11 @@
             android:layout_gravity="bottom|right"
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="14dp"
+            android:elevation="15dp"
             android:foreground="@drawable/ic_add_black_24dp"
             android:foregroundGravity="center"
-            app:backgroundTint="@color/colorPrimary"
+            android:foregroundTint="@color/main"
+            app:backgroundTint="@color/bottom_menu_item_checked"
             android:onClick="clickCreate"/>
     </android.support.design.widget.CoordinatorLayout>
 
@@ -33,7 +35,7 @@
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
         android:translationZ="20dp"
-        app:itemBackground="@color/colorPrimary"
+        app:itemBackground="@color/main"
         app:itemIconTint="@color/bottom_navigation_item_background_colors"
         app:itemTextColor="@color/bottom_navigation_item_background_colors"
         app:menu="@menu/main_bottom_menu"
