--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,16 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="main">#fff1a2</color>
+    <color name="status_bar">#80a19d</color>
+
+    <color name="bottom_menu_item_checked">#80a19d</color>
+    <color name="bottom_menu_item_unchecked">#aaa</color>
+
+    <color name="card_unpressed">#e3f2f0</color>
+    <color name="card_pressed">#b5d1cd</color>
+
     <color name="back">
         <selector xmlns:android="http://schemas.android.com/apk/res/android">
             <item
@@ -11,7 +21,6 @@
             <item
                 android:color="@android:color/white"
                 android:state_checked="true"/>
-
         </selector>
     </color>
 </resources>
