--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#000"
     android:gravity="center_horizontal"
     android:orientation="vertical">
+
+    <ru.polytech.course.pashnik.lines.Graphics.ScoreView
+        android:id="@+id/score_view"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:background="#000" />
 
     <ru.polytech.course.pashnik.lines.Scene
         android:id="@+id/game_view"
@@ -13,4 +20,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:background="#C0C0C0" />
+
 </LinearLayout>
