--- a/Monopoly/app/src/main/res/layout/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout/activity_game.xml
@@ -194,7 +194,7 @@
         android:id="@+id/cellHouseTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell cost for buy/sell second house:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellHouseOne"
@@ -203,7 +203,7 @@
         android:id="@+id/cellHouseThree"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell cost for buy/sell third house:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellHouseTwo"
@@ -213,7 +213,7 @@
         android:id="@+id/cellHotel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell cost for buy/sell Hotel:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellHouseThree"
