--- a/Monopoly/app/src/main/res/layout/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout/activity_game.xml
@@ -145,7 +145,7 @@
         android:id="@+id/cellName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell Name:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@+id/HorizontalGuideline"
@@ -155,7 +155,7 @@
         android:id="@+id/cellCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell Cost for buying:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellName"
@@ -165,7 +165,7 @@
         android:id="@+id/cellSell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell Cost for selling:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellCost"
@@ -175,7 +175,7 @@
         android:id="@+id/cellCharge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell charge:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellSell"
@@ -185,7 +185,7 @@
         android:id="@+id/cellHouseOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell cost for buy/sell first house:"
+        android:text=""
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/cellCharge"
