--- a/app/src/main/res/layout/activity_in_location.xml
+++ b/app/src/main/res/layout/activity_in_location.xml
@@ -41,9 +41,11 @@
 
             <Button
                 android:id="@+id/activity_in_location_manu_settings"
-                android:layout_width="70sp"
+                android:textSize="25sp"
+                android:layout_width="80sp"
                 android:layout_height="70sp"
                 android:layout_weight="1"
+                style="@style/BMRButton"
                 android:text="MENU" />
 
             <Space
@@ -53,11 +55,28 @@
 
             <Button
                 android:id="@+id/activity_in_location_manu_statistics"
-                android:layout_width="70sp"
+                android:textSize="25sp"
+                android:layout_width="80sp"
                 android:layout_height="70sp"
                 android:layout_weight="1"
                 android:enabled="true"
+                style="@style/BMRButton"
                 android:text="STATS" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
+
+            <Button
+                android:id="@+id/activity_in_location_manu_map"
+                android:textSize="25sp"
+                android:layout_width="80sp"
+                android:layout_height="70sp"
+                android:layout_weight="1"
+                android:enabled="true"
+                style="@style/BMRButton"
+                android:text="MAP" />
 
             <Space
                 android:layout_width="wrap_content"
