--- a/app/src/main/res/layout/fragment_character_creation.xml
+++ b/app/src/main/res/layout/fragment_character_creation.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_light"
+    android:alpha="1"
+    android:background="#55111133"
     android:gravity="top|center"
     android:orientation="vertical"
     android:showDividers="beginning|middle|end"
