--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,17 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <ru.polytech.course.pashnik.lines.Graphics.ScoreView
-        android:id="@+id/score_view"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:background="#000" />
+    <!--<ru.polytech.course.pashnik.lines.Graphics.ScoreView-->
+        <!--android:id="@+id/score_view"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:background="#000" />-->
 
-    <ru.polytech.course.pashnik.lines.Scene
+    <ru.polytech.course.pashnik.lines.Graphics.GameView
         android:id="@+id/game_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
         android:background="#C0C0C0" />
 
 </LinearLayout>
