--- a/app/src/main/res/layout/activity_character_creation.xml
+++ b/app/src/main/res/layout/activity_character_creation.xml
@@ -9,9 +9,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/BMRButtonSmall"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:alpha="0.4"
+        android:contentDescription="TODO"
         android:scaleX="2"
         android:scaleY="2"
         app:srcCompat="@drawable/character_art" />
@@ -22,23 +24,188 @@
         android:gravity="top|center_horizontal"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/activity_character_creation_fragHolder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="15sp"
-            android:layout_weight="60">
+        <TextView
+            android:id="@+id/activity_character_creation_char_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Персонаж"
+            android:textColor="#ffe2a6"
+            android:textSize="28sp"
+            tools:layout_margin="6dp" />
 
-        </FrameLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="175dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="6dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/char_face_woman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
+                android:src="@drawable/char_face_woman" />
+
+            <ImageView
+                android:id="@+id/char_face_man"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:src="@drawable/char_face_man" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/activity_character_creation_edit_char_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:ems="10"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="center"
+            android:hint="Введите имя персонажа"
+            android:inputType="textPersonName"
+            android:textColor="#ffe2a6"
+            android:textColorHint="#C3BCBC" />
+
+        <TextView
+            android:id="@+id/activity_character_creation_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:layout_weight="0"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Очков осталось: 5"
+            android:textColor="#ffe2a6"
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_minus"
+                style="@style/BMRButtonSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="-" />
+
+            <TextView
+                android:id="@+id/activity_character_creation_strength"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Сила: 0"
+                android:textColor="#ffe2a6" />
+
+            <Button
+                android:id="@+id/button_plus"
+                style="@style/BMRButtonSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="+" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_minus"
+                style="@style/BMRButtonSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="-" />
+
+            <TextView
+                android:id="@+id/activity_character_creation_agility"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Ловкость: 0"
+                android:textColor="#ffe2a6" />
+
+            <Button
+                android:id="@+id/button_plus"
+                style="@style/BMRButtonSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="Button"
+                tools:text="+" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button_minus"
+                style="@style/BMRButtonSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="Button"
+                tools:text="-" />
+
+            <TextView
+                android:id="@+id/activity_character_creation_intellect"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Интеллект: 0"
+                android:textColor="#ffe2a6" />
+
+            <Button
+                android:id="@+id/button_plus"
+                style="@style/BMRButtonSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="Button"
+                tools:text="+" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/activity_character_creation_proceedButton"
+            style="@style/BMRButton"
             android:layout_width="wrap_content"
             android:layout_height="65dp"
-            android:layout_margin="15sp"
-            style="@style/BMRButton"
-            android:text="СОЗДАТЬ"
+            android:layout_margin="10dp"
             android:layout_weight="0"
+            android:text="СОЗДАТЬ"
             android:textSize="30sp" />
 
     </LinearLayout>
