--- a/app/src/main/res/layout/activity_character_creation.xml
+++ b/app/src/main/res/layout/activity_character_creation.xml
@@ -12,42 +12,42 @@
         style="@style/BMRButtonSmall"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.4"
-        android:contentDescription="TODO"
-        android:scaleX="2"
-        android:scaleY="2"
+        android:alpha="0.3"
+        android:scaleX="3"
+        android:scaleY="3"
         app:srcCompat="@drawable/character_art" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="top|center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/activity_character_creation_char_name"
+            style="@style/BMRTextTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
+            android:layout_weight="2"
+            android:gravity="center"
             android:text="Персонаж"
             android:textColor="#ffe2a6"
-            android:textSize="28sp"
+            android:textSize="40sp"
             tools:layout_margin="6dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="175dp"
+            android:layout_height="200dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/char_face_woman"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="2dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:src="@drawable/char_face_woman" />
 
@@ -55,18 +55,20 @@
                 android:id="@+id/char_face_man"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:src="@drawable/char_face_man" />
+
         </LinearLayout>
 
         <EditText
             android:id="@+id/activity_character_creation_edit_char_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_weight="1"
             android:ems="10"
-            android:fontFamily="sans-serif-condensed"
+            style="@style/BMRTextTitle"
+            android:textSize="26sp"
             android:gravity="center"
             android:hint="Введите имя персонажа"
             android:inputType="textPersonName"
@@ -77,31 +79,34 @@
             android:id="@+id/activity_character_creation_points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:layout_weight="0"
-            android:fontFamily="sans-serif-condensed"
+            android:layout_weight="1"
+            style="@style/BMRTextSmall"
             android:text="Очков осталось: 5"
             android:textColor="#ffe2a6"
-            android:textSize="18sp" />
+            android:textSize="26sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="6dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button_minus"
+                android:id="@+id/button_minus_str"
                 style="@style/BMRButtonSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="-" />
+                android:text="-"
+                android:textSize="23sp" />
 
             <TextView
-                android:id="@+id/activity_character_creation_strength"
+                android:id="@+id/activity_character_creation_strengthText"
+                style="@style/BMRTextSmall"
+                android:textSize="20sp"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -110,91 +115,101 @@
                 android:textColor="#ffe2a6" />
 
             <Button
-                android:id="@+id/button_plus"
+                android:id="@+id/button_plus_str"
                 style="@style/BMRButtonSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="+" />
+                android:text="+"
+                android:textSize="23sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
+
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button_minus"
+                android:id="@+id/button_minus_agi"
                 style="@style/BMRButtonSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="-" />
+                android:text="-"
+                android:textSize="23sp" />
 
             <TextView
-                android:id="@+id/activity_character_creation_agility"
+                android:id="@+id/activity_character_creation_agilityText"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
+                style="@style/BMRTextSmall"
+                android:textSize="20sp"
                 android:text="Ловкость: 0"
                 android:textColor="#ffe2a6" />
 
             <Button
-                android:id="@+id/button_plus"
+                android:id="@+id/button_plus_agi"
                 style="@style/BMRButtonSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="Button"
-                tools:text="+" />
+                android:text="+"
+                android:textSize="23sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button_minus"
+                android:id="@+id/button_minus_int"
                 style="@style/BMRButtonSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="Button"
-                tools:text="-" />
+                android:text="-"
+                android:textSize="23sp" />
 
             <TextView
-                android:id="@+id/activity_character_creation_intellect"
+                android:id="@+id/activity_character_creation_intellectText"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                style="@style/BMRTextSmall"
+                android:textSize="20sp"
                 android:gravity="center"
                 android:text="Интеллект: 0"
                 android:textColor="#ffe2a6" />
 
             <Button
-                android:id="@+id/button_plus"
+                android:id="@+id/button_plus_int"
                 style="@style/BMRButtonSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_weight="1"
-                android:text="Button"
-                tools:text="+" />
+                android:text="+"
+                android:textSize="23sp" />
 
         </LinearLayout>
 
@@ -204,7 +219,7 @@
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_margin="10dp"
-            android:layout_weight="0"
+            android:layout_weight="1"
             android:text="СОЗДАТЬ"
             android:textSize="30sp" />
 
