new cells/cell colors/some fixes

--- a/Monopoly/app/src/main/res/values/colors.xml
+++ b/Monopoly/app/src/main/res/values/colors.xml
@@ -4,5 +4,11 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorGrey">#808080</color>
+    <color name="Player1BackgroundColor">#f15c5c</color>
+    <color name="Player2BackgroundColor">#3c87ff</color>
+    <color name="Player3BackgroundColor">#b440ed</color>
+    <color name="Player4BackgroundColor">#f8ff26</color>
+    <color name="cellBackground">#373aff</color>
+
 
 </resources>
